# sublime-search

./: Cargo.toml  README.md  pyproject.toml
python/fuzzy_match_rs/: __init__.py
python/sublime_search/: __init__.py
src/: lib.rs
tests/: test_fuzzy.py
